NEXT-2821 - Adjust media folder and upload events

--- a/Resources/administration/src/app/component/media/sw-media-media-item/sw-media-media-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-media-item/sw-media-media-item.html.twig
@@ -8,7 +8,7 @@
             <template #preview="{ item }">
                 <sw-media-preview
                     :source="item.id"
-                    @sw-media-preview-play="emitPlayEvent($event, item)">
+                    @play="emitPlayEvent($event, item)">
                 </sw-media-preview>
             </template>
         {% endblock %}
