--- a/Resources/administration/src/module/sw-cms/component/sw-cms-block/sw-cms-block.scss
+++ b/Resources/administration/src/module/sw-cms/component/sw-cms-block/sw-cms-block.scss
@@ -2,6 +2,8 @@
 
 .sw-cms-block {
     position: relative;
+    background-repeat: no-repeat;
+    background-position: center center;
 
     &:hover {
         .sw-cms-block__config-overlay {
