--- a/Resources/administration/src/module/sw-cms/component/sw-cms-block-layout-config/sw-cms-block-layout-config.html.twig
+++ b/Resources/administration/src/module/sw-cms/component/sw-cms-block-layout-config/sw-cms-block-layout-config.html.twig
@@ -1,19 +1,19 @@
 {% block sw_cms_block_layout_config %}
     <div class="sw-cms-block-layout-config">
         {% block sw_cms_block_layout_config_top_margin_field %}
-            <sw-text-field :label="$tc('sw-cms.detail.labelBlockTopMarginField')" v-model="block.config.marginTop"></sw-text-field>
+            <sw-text-field :label="$tc('sw-cms.detail.labelBlockTopMarginField')" v-model="block.marginTop"></sw-text-field>
         {% endblock %}
 
         {% block sw_cms_block_layout_config_bottom_margin_field %}
-            <sw-text-field :label="$tc('sw-cms.detail.labelBlockBottomMarginField')" v-model="block.config.marginBottom"></sw-text-field>
+            <sw-text-field :label="$tc('sw-cms.detail.labelBlockBottomMarginField')" v-model="block.marginBottom"></sw-text-field>
         {% endblock %}
 
         {% block sw_cms_block_layout_config_left_margin_field %}
-            <sw-text-field :label="$tc('sw-cms.detail.labelBlockLeftMarginField')" v-model="block.config.marginLeft"></sw-text-field>
+            <sw-text-field :label="$tc('sw-cms.detail.labelBlockLeftMarginField')" v-model="block.marginLeft"></sw-text-field>
         {% endblock %}
 
         {% block sw_cms_block_layout_config_right_margin_field %}
-            <sw-text-field :label="$tc('sw-cms.detail.labelBlockRightMarginField')" v-model="block.config.marginRight"></sw-text-field>
+            <sw-text-field :label="$tc('sw-cms.detail.labelBlockRightMarginField')" v-model="block.marginRight"></sw-text-field>
         {% endblock %}
     </div>
 {% endblock %}
