--- a/Resources/administration/src/app/component/media/sw-media-field/sw-media-field.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-field/sw-media-field.html.twig
@@ -55,7 +55,7 @@
                         <sw-upload-store-listener
                                 :uploadTag="uploadTag"
                                 autoUpload
-                                @sw-media-upload-finished="exposeNewId">
+                                @media-upload-finish="exposeNewId">
                         </sw-upload-store-listener>
                         <sw-media-upload
                             v-if="showUploadField"
