--- a/Resources/administration/src/app/component/media/sw-media-modal-replace/sw-media-modal-replace.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-modal-replace/sw-media-modal-replace.html.twig
@@ -6,7 +6,7 @@
 
         <sw-upload-store-listener
             :uploadTag="itemToReplace.id"
-            @sw-media-upload-added="onNewUpload">
+            @media-upload-add="onNewUpload">
         </sw-upload-store-listener>
         <sw-media-replace
             class="sw-media-modal-replace__upload"
