--- a/Resources/administration/src/module/sw-category/view/sw-category-detail-base/sw-category-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-category/view/sw-category-detail-base/sw-category-detail-base.html.twig
@@ -79,7 +79,7 @@
                 {% block sw_category_detail_menu_media %}
                     <sw-upload-store-listener
                         :uploadTag="category.id"
-                        @sw-media-upload-finished="setMediaItem"
+                        @media-upload-finish="setMediaItem"
                         autoUpload>
                     </sw-upload-store-listener>
                     <sw-media-upload
