--- a/Resources/administration/src/module/sw-mail-template/component/sw-mail-template-media-form/sw-mail-template-media-form.html.twig
+++ b/Resources/administration/src/module/sw-mail-template/component/sw-mail-template-media-form/sw-mail-template-media-form.html.twig
@@ -3,8 +3,8 @@
         {% block sw_mail_template_media_form_upload %}
             <sw-upload-store-listener
                     :uploadTag="mailTemplate.id"
-                    @sw-media-upload-added="onUploadsAdded"
-                    @sw-media-upload-finished="successfulUpload"
+                    @media-upload-add="onUploadsAdded"
+                    @media-upload-finish="successfulUpload"
                     @media-upload-fail="onUploadFailed">
             </sw-upload-store-listener>
             <sw-media-upload
