--- a/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.html.twig
+++ b/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.html.twig
@@ -72,7 +72,7 @@
                             <sw-upload-store-listener
                                 :uploadTag="mediaUploadTag"
                                 autoUpload
-                                @sw-media-upload-finished="setMediaItem">
+                                @media-upload-finish="setMediaItem">
                             </sw-upload-store-listener>
                             <sw-media-upload
                                 :source="mediaItem"
