--- a/Resources/administration/src/module/sw-media/component/sw-media-modal/sw-media-modal.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sw-media-modal/sw-media-modal.html.twig
@@ -63,8 +63,8 @@
                                             {% block sw_media_modal_upload_component %}
                                                 <sw-upload-store-listener
                                                     :uploadTag="uploadTag"
-                                                    @sw-media-upload-added="onUploadsAdded"
-                                                    @sw-media-upload-finished="onUploadFinished"
+                                                    @media-upload-add="onUploadsAdded"
+                                                    @media-upload-finish="onUploadFinished"
                                                     @media-upload-fail="onUploadFailed">
                                                 </sw-upload-store-listener>
                                                 <sw-media-upload
