--- a/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
@@ -70,8 +70,8 @@
                     {% block sw_media_index_listing_grid %}
                         <sw-upload-store-listener
                             :uploadTag="uploadTag"
-                            @sw-media-upload-added="onUploadsAdded"
-                            @sw-media-upload-finished="onUploadFinished"
+                            @media-upload-add="onUploadsAdded"
+                            @media-upload-finish="onUploadFinished"
                             @media-upload-fail="onUploadFailed">
                         </sw-upload-store-listener>
                         <sw-media-library
