--- a/Resources/administration/src/module/sw-product/component/sw-product-media-form/sw-product-media-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-media-form/sw-product-media-form.html.twig
@@ -4,8 +4,8 @@
         {% block sw_product_media_form_upload %}
             <sw-upload-store-listener
                 :uploadTag="product.id"
-                @sw-media-upload-added="onUploadsAdded"
-                @sw-media-upload-finished="successfulUpload"
+                @media-upload-add="onUploadsAdded"
+                @media-upload-finish="successfulUpload"
                 @media-upload-fail="onUploadFailed">
             </sw-upload-store-listener>
             <sw-media-upload
