--- a/Resources/administration/src/module/sw-profile/page/sw-profile-index/sw-profile-index.html.twig
+++ b/Resources/administration/src/module/sw-profile/page/sw-profile-index/sw-profile-index.html.twig
@@ -55,7 +55,7 @@
                                 <sw-upload-store-listener
                                     :uploadTag="uploadTag"
                                     autoUpload
-                                    @sw-media-upload-finished="setMediaItem">
+                                    @media-upload-finish="setMediaItem">
                                 </sw-upload-store-listener>
                                 <sw-media-upload
                                     :uploadTag="uploadTag"
