--- a/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-detail/sw-settings-shipping-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-detail/sw-settings-shipping-detail.html.twig
@@ -64,7 +64,7 @@
                             {% block sw_settings_shipping_detail_base_content_media_upload %}
                                 <sw-upload-store-listener :uploadTag="uploadTag"
                                                           autoUpload
-                                                          @sw-media-upload-finished="setMediaItem">
+                                                          @media-upload-finish="setMediaItem">
                                 </sw-upload-store-listener>
                                 <sw-media-upload v-if="!isLoading"
                                                  :uploadTag="uploadTag"
