--- a/Resources/administration/src/module/sw-settings-user/page/sw-settings-user-detail/sw-settings-user-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-user/page/sw-settings-user-detail/sw-settings-user-detail.html.twig
@@ -70,7 +70,7 @@
                                         <sw-upload-store-listener
                                                 :uploadTag="user.id"
                                                 autoUpload
-                                                @sw-media-upload-finished="setMediaItem">
+                                                @media-upload-finish="setMediaItem">
                                         </sw-upload-store-listener>
                                         <sw-media-upload
                                                 class="sw-settings-user-detail__grid-profile-picture"
