--- a/Resources/administration/src/app/component/media/sw-media-folder-item/sw-media-folder-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-folder-item/sw-media-folder-item.html.twig
@@ -136,8 +136,8 @@
                     <sw-media-modal-folder-dissolve
                             v-if="showDissolveModal"
                             :itemsToDissolve="[item]"
-                            @items-dissolve="onFolderDissolved"
-                            @close="closeDissolveModal">
+                            @media-folder-dissolve-modal-dissolve="onFolderDissolved"
+                            @media-folder-dissolve-modal-close="closeDissolveModal">
                     </sw-media-modal-folder-dissolve>
                 {% endblock %}
 
