--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-folder-info/sw-media-folder-info.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-folder-info/sw-media-folder-info.html.twig
@@ -90,8 +90,8 @@
             <sw-media-modal-folder-dissolve
                 v-if="showFolderDissolve"
                 :itemsToDissolve="[mediaFolder]"
-                @items-dissolve="onFolderDissolved"
-                @close="closeFolderDissolve">
+                @media-folder-dissolve-modal-dissolve="onFolderDissolved"
+                @media-folder-dissolve-modal-close="closeFolderDissolve">
             </sw-media-modal-folder-dissolve>
         {% endblock %}
 
