--- a/Resources/administration/src/module/sw-customer/view/sw-customer-detail-order/sw-customer-detail-order.html.twig
+++ b/Resources/administration/src/module/sw-customer/view/sw-customer-detail-order/sw-customer-detail-order.html.twig
@@ -50,7 +50,7 @@
                                                 dataIndex="amountTotal"
                                                 sortable
                                                 align="right">
-                                    {{ item.amountTotal }} {{ item.currency.symbol }}
+                                    {{ item.amountTotal | currency }}
                                 </sw-grid-column>
                             {% endblock %}
                             {% block sw_customer_detail_order_card_grid_columns_state %}
