NEXT-2821 - Rename settings modal events

--- a/Resources/administration/src/app/component/media/sw-media-folder-item/sw-media-folder-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-folder-item/sw-media-folder-item.html.twig
@@ -127,8 +127,8 @@
                     <sw-media-modal-folder-settings
                             v-if="showSettings"
                             :folder="item"
-                            @save="closeSettings"
-                            @close="closeSettings">
+                            @media-settings-modal-save="closeSettings"
+                            @media-settings-modal-close="closeSettings">
                     </sw-media-modal-folder-settings>
                 {% endblock %}
 
