NEXT-2265 - Minor CMS fixes

--- a/Resources/administration/src/module/sw-cms/component/sw-cms-block/sw-cms-block.html.twig
+++ b/Resources/administration/src/module/sw-cms/component/sw-cms-block/sw-cms-block.html.twig
@@ -1,7 +1,7 @@
 {% block sw_cms_block %}
     <div class="sw-cms-block" :class="blockClasses" :style="blockStyles">
         {% block sw_cms_block_content %}
-            <div class="sw-cms-block__content">
+            <div class="sw-cms-block__content" :style="blockPadding">
                 <slot>{% block sw_cms_block_slot_default %}{% endblock %}</slot>
             </div>
         {% endblock %}
