NEXT-2884 - Implement notification-center first ui

--- a/Resources/administration/src/app/component/structure/sw-page/sw-page.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-page/sw-page.html.twig
@@ -10,6 +10,13 @@
                             {% endblock %}
                         </slot>
                     </div>
+                    {% block sw_page_top_bar_actions %}
+                        <div class="sw-page__top-bar-actions">
+                            {% block sw_page_notification_center %}
+                                <sw-notification-center></sw-notification-center>
+                            {% endblock %}
+                        </div>
+                    {% endblock %}
                 {% endblock %}
 
                 {% block sw_page_smart_bar %}
