NEXT-2809 - Admin module basic settings

--- a/Resources/administration/src/app/component/form/sw-form-field-renderer/sw-form-field-renderer.html.twig
+++ b/Resources/administration/src/app/component/form/sw-form-field-renderer/sw-form-field-renderer.html.twig
@@ -1,5 +1,5 @@
 {% block sw_form_field_renderer %}
-    <component v-bind:is="component"
+    <component v-bind:is="currentComponentName"
                v-bind="bind"
                ref="component"
                v-model="currentValue">
